Briefly list any changes you made to your graph class during hw-marvel,
and why you made those changes.

I added a containsNode method so that I can check whether or not a
node is in the graph