@@ -1,0 +1,8 @@
+Yufei,CartPushing
+Andrew,CartPushing
+Andrew,MoveIn
+Ethan,Poplar
+Ethan,CSE190B
+Elaine,CSE190B
+Elaine,MoveIn
+Fake,Nothing
