@@ -7,32 +7,46 @@ import static org.junit.Assert.*;
 import java.util.*;
 
 public class MarvelPathsTest {
+
+    Graph f = new Graph();
     Graph g = new Graph();
 
     @Before
-    public void constructGraph(){
+    public void constructGraphForBuildGraph(){
         g.addNode("Perkins-the-Magical-Singing-Instructor");
         g.addNode("Grossman-the-Youngest-of-them-all");
         g.addNode("Ernst-the-Bicycling-Wizard");
         g.addNode("Notkin-of-the-Superhuman-Beard");
-        g.addEdge("Ernst-the-Bicycling-Wizard", "Notkin-of-the-Superhuman-Beard", "CSE331"); // 1
+        g.addEdge("Ernst-the-Bicycling-Wizard", "Notkin-of-the-Superhuman-Beard", "CSE331");
         g.addEdge("Notkin-of-the-Superhuman-Beard","Ernst-the-Bicycling-Wizard",  "CSE331");
-        g.addEdge("Ernst-the-Bicycling-Wizard", "Perkins-the-Magical-Singing-Instructor", "CSE331"); // 2
+        g.addEdge("Ernst-the-Bicycling-Wizard", "Perkins-the-Magical-Singing-Instructor", "CSE331");
         g.addEdge("Perkins-the-Magical-Singing-Instructor", "Ernst-the-Bicycling-Wizard", "CSE331");
-        g.addEdge("Ernst-the-Bicycling-Wizard", "Grossman-the-Youngest-of-them-all", "CSE331"); // 3
+        g.addEdge("Ernst-the-Bicycling-Wizard", "Grossman-the-Youngest-of-them-all", "CSE331");
         g.addEdge("Grossman-the-Youngest-of-them-all", "Ernst-the-Bicycling-Wizard", "CSE331");
-        g.addEdge("Notkin-of-the-Superhuman-Beard","Perkins-the-Magical-Singing-Instructor",  "CSE331"); // 4
+        g.addEdge("Notkin-of-the-Superhuman-Beard","Perkins-the-Magical-Singing-Instructor",  "CSE331");
         g.addEdge("Perkins-the-Magical-Singing-Instructor",  "Notkin-of-the-Superhuman-Beard","CSE331");
-        g.addEdge("Notkin-of-the-Superhuman-Beard","Grossman-the-Youngest-of-them-all",  "CSE331"); // 5
+        g.addEdge("Notkin-of-the-Superhuman-Beard","Grossman-the-Youngest-of-them-all",  "CSE331");
         g.addEdge("Grossman-the-Youngest-of-them-all",  "Notkin-of-the-Superhuman-Beard","CSE331");
-        g.addEdge("Perkins-the-Magical-Singing-Instructor","Grossman-the-Youngest-of-them-all",  "CSE331"); // 6
+        g.addEdge("Perkins-the-Magical-Singing-Instructor","Grossman-the-Youngest-of-them-all",  "CSE331");
         g.addEdge("Grossman-the-Youngest-of-them-all",  "Perkins-the-Magical-Singing-Instructor","CSE331");
         g.addEdge("Ernst-the-Bicycling-Wizard", "Notkin-of-the-Superhuman-Beard", "CSE403");
         g.addEdge("Notkin-of-the-Superhuman-Beard", "Ernst-the-Bicycling-Wizard", "CSE403");
     }
 
+    @Before
+    public void constructGraphStrangersForBFS(){
+        f.addNode("Ethan");
+        f.addNode("Elaine");
+        f.addNode("Yufei");
+        f.addNode("Andrew");
+        f.addEdge("Ethan", "Elaine", "CS190B");
+        f.addEdge("Elaine", "Yufei", "Roommates");
+        f.addEdge("Yufei", "Andrew", "Poplar");
+        f.addEdge("Ethan", "Andrew", "Elaine");
+    }
+
     @Test
-    public void sameNodes(){
+    public void sameNodesInGraph(){
         Graph f = MarvelPaths.buildGraph("staffSuperheroes.csv");
         for (String parent : g.listNodes()) {
             assertTrue(f.containsNode(parent));
@@ -40,7 +54,7 @@ public class MarvelPathsTest {
     }
 
     @Test
-    public void sameChildren(){
+    public void sameChildrenInGraph(){
         Graph f = MarvelPaths.buildGraph("staffSuperheroes.csv");
         for (String parent : g.listNodes()) {
             assertTrue(f.containsNode(parent));
@@ -51,7 +65,7 @@ public class MarvelPathsTest {
     }
 
     @Test
-    public void sameEdges(){
+    public void sameEdgesInGraph(){
         Graph f = MarvelPaths.buildGraph("staffSuperheroes.csv");
         for (String parent : g.listNodes()){
             assertTrue(f.containsNode(parent));
@@ -76,21 +90,24 @@ public class MarvelPathsTest {
     }
 
     @Test
-    public void testFindPathStrangers(){
-        Graph f = new Graph();
-        f.addNode("Ethan");
-        f.addNode("Elaine");
-        f.addNode("Yufei");
-        f.addNode("Andrew");
-        f.addEdge("Ethan", "Elaine", "CS190B");
-        f.addEdge("Elaine", "Yufei", "Roommates");
-        f.addEdge("Yufei", "Andrew", "Poplar");
-        f.addEdge("Ethan", "Andrew", "Elaine");
+    public void testFindPathMultiplePaths(){
         List<String> e = new ArrayList<>();
         e.add("Ethan");
         e.add("Elaine");
         e.add("Andrew");
         assertEquals(e, MarvelPaths.findPath(f, "Ethan", "Andrew"));
         assertEquals(null, MarvelPaths.findPath(f, "Yufei", "Ethan"));
+    }
+
+    @Test
+    public void testFindPathNoPath(){
+        assertEquals(null, MarvelPaths.findPath(f, "Yufei", "Ethan"));
+    }
+
+    @Test
+    public void testFindPathToSelf(){
+        List<String> e = new ArrayList<>();
+        e.add("Ethan");
+        assertEquals(e, MarvelPaths.findPath(f, "Ethan", "Ethan"));
     }
 }
